Update app provider
