# internal/provider/types/base_component.go
@@ -1,0 +1,8 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+type BaseComponent struct {
+	CustomJourneyBlock *Schemas                         `tfsdk:"custom_journey_block" tfPlanOnly:"true"`
+	PortalExtension    *PortalExtensionComponentSchemas `tfsdk:"portal_extension" tfPlanOnly:"true"`
+}
