# internal/provider/types/options_ref.go
@@ -1,0 +1,10 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+import "github.com/hashicorp/terraform-plugin-framework/types"
+
+type OptionsRef struct {
+	ComponentID types.String `tfsdk:"component_id"`
+	Options     []Option     `tfsdk:"options"`
+}
