# internal/provider/types/portal_extension_config.go
@@ -1,0 +1,11 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+import "github.com/hashicorp/terraform-plugin-framework/types"
+
+type PortalExtensionConfig struct {
+	Hooks []Hooks      `tfsdk:"hooks"`
+	ID    types.String `tfsdk:"id"`
+	Links []Links      `tfsdk:"links"`
+}
