# internal/provider/types/schemas.go
@@ -1,0 +1,13 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+import "github.com/hashicorp/terraform-plugin-framework/types"
+
+type Schemas struct {
+	ComponentType types.String       `tfsdk:"component_type"`
+	Configuration JourneyBlockConfig `tfsdk:"configuration"`
+	ID            types.String       `tfsdk:"id"`
+	Name          *TranslatedString  `tfsdk:"name"`
+	Options       []Options          `tfsdk:"options"`
+}
