# internal/provider/types/translated_string.go
@@ -1,0 +1,10 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+import "github.com/hashicorp/terraform-plugin-framework/types"
+
+type TranslatedString struct {
+	De types.String `tfsdk:"de"`
+	En types.String `tfsdk:"en"`
+}
